syntax = "proto3";

package identity.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/identity/v1";

service IdentityService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateOrganization(CreateOrgRequest) returns (CreateOrgResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string organization_id = 3; // Link user to an org
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message CreateOrgRequest {
  string name = 1;
  string plan_id = 2; // Selected SaaS plan
}

message CreateOrgResponse {
  string organization_id = 1;
}
