syntax = "proto3";

package inventory.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/inventory/v1";

// InventoryService manages seat availability and allocation
// This is the HOT PATH - must handle 100K+ QPS during peak
service InventoryService {
  // Real-time availability check (READ - ScyllaDB optimized)
  rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  
  // Bulk availability for search results
  rpc BatchCheckAvailability(BatchCheckRequest) returns (BatchCheckResponse);
  
  // Hold seats temporarily (WRITE - with TTL)
  rpc HoldSeats(HoldSeatsRequest) returns (HoldSeatsResponse);
  
  // Release held seats (on timeout or user cancel)
  rpc ReleaseSeats(ReleaseSeatsRequest) returns (ReleaseSeatsResponse);
  
  // Confirm booking (convert hold to confirmed)
  rpc ConfirmBooking(ConfirmBookingRequest) returns (ConfirmBookingResponse);
  
  // Get seat map with availability status
  rpc GetSeatMap(GetSeatMapRequest) returns (GetSeatMapResponse);
  
  // Admin: Initialize inventory for a trip
  rpc InitializeTripInventory(InitializeTripInventoryRequest) returns (InitializeTripInventoryResponse);
  
  // Admin: Bulk update inventory (cancellations, adjustments)
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
}

// --- Availability Check ---

message CheckAvailabilityRequest {
  string trip_id = 1;
  string from_station_id = 2;  // Boarding station
  string to_station_id = 3;    // Alighting station
  int32 passengers = 4;
  string seat_class = 5;       // Optional: filter by class
  string organization_id = 6;
}

message CheckAvailabilityResponse {
  bool is_available = 1;
  int32 available_seats = 2;
  repeated SeatAvailability seats = 3;  // Detailed per-seat info
  int64 price_paisa = 4;
  int64 checked_at = 5;  // For cache invalidation
}

message SeatAvailability {
  string seat_id = 1;
  string seat_number = 2;
  string seat_class = 3;
  SeatStatus status = 4;
  int64 hold_expires_at = 5;  // If held, when does it expire
  string seat_type = 6;       // window, aisle, middle
}

enum SeatStatus {
  SEAT_STATUS_UNSPECIFIED = 0;
  SEAT_STATUS_AVAILABLE = 1;
  SEAT_STATUS_HELD = 2;
  SEAT_STATUS_BOOKED = 3;
  SEAT_STATUS_BLOCKED = 4;  // Maintenance, staff, etc.
}

message BatchCheckRequest {
  repeated CheckAvailabilityRequest requests = 1;
}

message BatchCheckResponse {
  repeated CheckAvailabilityResponse results = 1;
}

// --- Hold Seats ---

message HoldSeatsRequest {
  string trip_id = 1;
  string from_station_id = 2;
  string to_station_id = 3;
  repeated string seat_ids = 4;  // Specific seats to hold
  string user_id = 5;
  string session_id = 6;
  int32 hold_duration_seconds = 7;  // Default: 600 (10 min)
  string organization_id = 8;
}

message HoldSeatsResponse {
  string hold_id = 1;
  bool success = 2;
  repeated string held_seat_ids = 3;
  repeated string failed_seat_ids = 4;
  int64 expires_at = 5;
  string failure_reason = 6;
}

// --- Release Seats ---

message ReleaseSeatsRequest {
  string hold_id = 1;
  string user_id = 2;
  string organization_id = 3;
}

message ReleaseSeatsResponse {
  bool success = 1;
  int32 released_count = 2;
}

// --- Confirm Booking ---

message ConfirmBookingRequest {
  string hold_id = 1;
  string order_id = 2;
  string user_id = 3;
  repeated PassengerSeat passengers = 4;
  string organization_id = 5;
}

message PassengerSeat {
  string seat_id = 1;
  string passenger_nid = 2;
  string passenger_name = 3;
}

message ConfirmBookingResponse {
  bool success = 1;
  string booking_id = 2;
  repeated ConfirmedSeat confirmed_seats = 3;
  string failure_reason = 4;
}

message ConfirmedSeat {
  string seat_id = 1;
  string seat_number = 2;
  string ticket_id = 3;
}

// --- Seat Map ---

message GetSeatMapRequest {
  string trip_id = 1;
  string from_station_id = 2;
  string to_station_id = 3;
  string organization_id = 4;
}

message GetSeatMapResponse {
  string vehicle_id = 1;
  string vehicle_type = 2;
  int32 total_rows = 3;
  int32 total_columns = 4;
  repeated SeatRow rows = 5;
  SeatMapLegend legend = 6;
}

message SeatRow {
  int32 row_number = 1;
  repeated SeatCell seats = 2;
}

message SeatCell {
  string seat_id = 1;
  string seat_number = 2;
  int32 column = 3;
  string seat_type = 4;       // window, aisle, middle, none (for gaps)
  string seat_class = 5;
  SeatStatus status = 6;
  int64 price_paisa = 7;
  bool is_accessible = 8;     // Wheelchair accessible
  bool has_power = 9;         // Power outlet
  bool is_exit_row = 10;
}

message SeatMapLegend {
  map<string, string> status_colors = 1;  // {"available": "#00FF00", "booked": "#FF0000"}
  map<string, string> class_colors = 2;
}

// --- Admin: Initialize Inventory ---

message InitializeTripInventoryRequest {
  string trip_id = 1;
  string organization_id = 2;
  string vehicle_id = 3;
  repeated SegmentDefinition segments = 4;
  SeatConfiguration seat_config = 5;
}

message SegmentDefinition {
  int32 segment_index = 1;
  string from_station_id = 2;
  string to_station_id = 3;
  int64 departure_time = 4;
  int64 arrival_time = 5;
}

message SeatConfiguration {
  int32 total_seats = 1;
  repeated SeatDefinition seats = 2;
}

message SeatDefinition {
  string seat_id = 1;
  string seat_number = 2;
  int32 row = 3;
  int32 column = 4;
  string seat_type = 5;
  string seat_class = 6;
  int64 price_paisa = 7;
  bool is_accessible = 8;
  bool has_power = 9;
}

message InitializeTripInventoryResponse {
  bool success = 1;
  int32 segments_created = 2;
  int32 seats_created = 3;
}

// --- Admin: Update Inventory ---

message UpdateInventoryRequest {
  string trip_id = 1;
  string organization_id = 2;
  repeated SeatUpdate updates = 3;
}

message SeatUpdate {
  string seat_id = 1;
  SeatStatus new_status = 2;
  string reason = 3;  // "maintenance", "staff_reserved", etc.
}

message UpdateInventoryResponse {
  bool success = 1;
  int32 updated_count = 2;
}
